# hydebar

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md  flake.nix  install.sh
crates/hydebar-app/: Cargo.toml
crates/hydebar-app/src/: main.rs
crates/hydebar-core/: Cargo.toml
crates/hydebar-core/src/: adapters.rs  config.rs  event_bus.rs  lib.rs  menu.rs  module_context.rs  modules.rs  outputs.rs  password_dialog.rs  position_button.rs  services.rs  style.rs  test_utils.rs  utils.rs
crates/hydebar-core/src/adapters/: hyprland_client.rs
crates/hydebar-core/src/adapters/hyprland_client/: config.rs  listeners.rs  sync_ops.rs  util.rs
crates/hydebar-core/src/components/: icons.rs
crates/hydebar-core/src/config/: manager.rs  watch.rs
crates/hydebar-core/src/modules/: app_launcher.rs  battery.rs  clipboard.rs  clock.rs  custom_module.rs  keyboard_layout.rs  keyboard_submap.rs  media_player.rs  notifications.rs  privacy.rs  screenshot.rs  settings.rs  system_info.rs  tray.rs  updates.rs  weather.rs  window_title.rs  workspaces.rs
crates/hydebar-core/src/modules/clock/: calendar.rs  mod.rs  view.rs
crates/hydebar-core/src/modules/custom_module/: tests.rs
crates/hydebar-core/src/modules/settings/: audio.rs  bluetooth.rs  brightness.rs  commands.rs  event_forwarders.rs  network.rs  power.rs  state.rs  upower.rs  view.rs
crates/hydebar-core/src/modules/system_info/: data.rs  runtime.rs  view.rs
crates/hydebar-core/src/modules/updates/: commands.rs  state.rs  view.rs
crates/hydebar-core/src/outputs/: config.rs  state.rs  wayland.rs
crates/hydebar-core/src/services/: audio.rs  bluetooth.rs  brightness.rs  idle_inhibitor.rs  mpris.rs  network.rs  notifications.rs  privacy.rs  tray.rs  upower.rs
crates/hydebar-core/src/services/audio/: backend.rs  model.rs  service.rs
crates/hydebar-core/src/services/bluetooth/: dbus.rs
crates/hydebar-core/src/services/brightness/: error.rs
crates/hydebar-core/src/services/idle_inhibitor/: error.rs
crates/hydebar-core/src/services/mpris/: commands.rs  data.rs  dbus.rs  ipc.rs
crates/hydebar-core/src/services/network/: data.rs  service.rs
crates/hydebar-core/src/services/network/backend/: common.rs  iwd.rs  mod.rs  network_manager.rs
crates/hydebar-core/src/services/network/backend/iwd/: access_point.rs  adapter.rs  agent_manager.rs  basic_service_set.rs  daemon.rs  device.rs  device_provisioning.rs  (+7 more)
crates/hydebar-core/src/services/privacy/: error.rs  inotify.rs  pipewire.rs  publisher.rs
crates/hydebar-core/src/services/tray/: dbus.rs  icon.rs  watcher.rs
crates/hydebar-core/src/services/upower/: dbus.rs
crates/hydebar-core/src/style/: buttons.rs  menus.rs  theme.rs
crates/hydebar-core/src/utils/: launcher.rs
crates/hydebar-gui/: Cargo.toml
crates/hydebar-gui/src/: app.rs  centerbox.rs  lib.rs
crates/hydebar-gui/src/app/: bus.rs  micro_ticker.rs  modules.rs  state.rs  update.rs  view.rs
crates/hydebar-gui/src/views/: battery.rs  clock.rs  mod.rs
crates/hydebar-proto/: Cargo.toml
crates/hydebar-proto/src/: config.rs  lib.rs  ports.rs
crates/hydebar-proto/src/config/: appearance.rs  keybindings.rs  modules.rs  serde_helpers.rs  themes.rs  themes_tests.rs  validation.rs
crates/hydebar-proto/src/ports/: hyprland.rs
(+25 files in other folders)
