[package]
name = "hydebar-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
flexi_logger.workspace = true
hydebar-core = { path = "../hydebar-core" }
hydebar-gui = { path = "../hydebar-gui" }
hydebar-proto = { path = "../hydebar-proto" }
iced.workspace = true
log.workspace = true
masterror.workspace = true
tokio.workspace = true
